--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lerna",
+  "name": "@anilanar/lerna",
   "version": "2.0.0-beta.28",
   "description": "Tool for managing JavaScript projects with multiple packages",
   "main": "lib/index.js",
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lerna/lerna.git"
+    "url": "git+https://github.com/anilanar/lerna.git"
   },
-  "author": "Sebastian McKenzie <sebmck@gmail.com>",
+  "author": "Anil Anar <anilanar141@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lerna/lerna/issues"
+    "url": "https://github.com/anilanar/lerna/issues"
   },
-  "homepage": "https://lernajs.io/",
+  "homepage": "https://github.com/anilanar/lerna",
   "dependencies": {
     "async": "^1.5.0",
     "chalk": "^1.1.1",
